# nfldata

./: .dockerignore  .gitignore  LICENSE  Pipfile  README.md  api-requirements.txt  dev-requirements.txt  elevations.csv  notebook-requirements.txt  pyproject.toml  requirements.txt  scrapy.cfg  spider-requirements.txt
containers/: api-cloudbuild.yaml  api-deployment.yaml  api.Dockerfile  spider.Dockerfile  webapp-cloudbuild.yaml  webapp-deployment.yaml  webapp.Dockerfile
deploy/: api-deployment.yaml  api-service.yaml  splash-server-deployment.yaml  webapp-deployment.yaml  webapp-service.yaml
nfldata/: settings.py
nfldata/analysis/: elevations.py  tables.py
nfldata/api/: __init__.py  coaches.py
nfldata/common/: address.py  pfr.py  usgs.py
nfldata/items/: coaches.py  draft.py  executives.py  injuries.py  lookups.py  players.py  rosters.py  schools.py  stadiums.py  teams.py
nfldata/learning/: download.py  label.py  play_type.py  split.py  video.py
nfldata/pipelines/: sqlite.py
nfldata/spiders/: coaches.py  draft.py  teams.py  (+6 more)
notebooks/: Deep Learning - Play Recognition.ipynb  NFL Injury Patterns.ipynb  front-office.ipynb  home-field-advantage.ipynb  play-recognition.ipynb
scripts/: activate-env  api-server  api-server.py  api-server.sh  build-database  build-database.sh  create-env  create-env.py  export-cities  format  format.sh  import-elevations  lint  lint.sh  list-logfile-errors  pre-commit  spider.py  spider.sh  splash-server.sh  todos  todos.sh  update-dependencies  webapp.py  webapp.sh
webapp/: .env.development  package-lock.json  package.json
(+6 files in other folders)
