[tool.poetry]
name = "nfldata"
version = "0.1.0"
description = ""
authors = ["Pradyoth Kukkapalli <pkukkapalli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.0"
scrapy-splash = "^0.7.2"
matplotlib = "^3.3.3"
jupyter = "^1.0.0"
pandas = "^1.1.4"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
